--- a/src/style.css
+++ b/src/style.css
@@ -1,66 +1,79 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: #535353;
-    font-family: sans-serif;
+body {
+	margin: 0;
+	padding: 0;
+	background: #535353;
+	font-family: sans-serif;
 }
 
 /* Страница*/
-.App{
-    max-width: 1024px;
-    min-height: 100vh;
-    margin: 0 auto;
-    background: #fff;
-    box-sizing: border-box;
-    box-shadow: 0 0 15px 5px #0000003b;
+.App {
+	max-width: 1024px;
+	min-height: 100vh;
+	margin: 0 auto;
+	background: #fff;
+	box-sizing: border-box;
+	box-shadow: 0 0 15px 5px #0000003b;
 }
-.App__head{
-    height: 80px;
-    background: #f5f5f5;
+.App__head {
+	height: 80px;
+	background: #f5f5f5;
 }
-.App__head h1{
-    margin: 0;
-    padding: 20px 20px 10px;
+.App__head h1 {
+	margin: 0;
+	padding: 20px 20px 10px;
 }
 
 /* Контрол с общими действиями */
-.Controls{
-    display: flex;
-    justify-content: flex-end;
-    padding: 20px;
+.Controls {
+	display: flex;
+	justify-content: flex-end;
+	padding: 20px;
 }
 
 /*Список*/
-.List{
 
-}
-.List__item{
-    border-bottom: 1px dashed #ccc;
-    transition: background-color 1s;
+.List__item {
+	border-bottom: 1px dashed #ccc;
+	transition: background-color 1s;
 }
 
-.List__item_selected{
-    background: #75aaf1;
+.List__item_selected {
+	background: #75aaf1;
 }
 
-.List__item:first-child{
-    border-top: 1px dashed #ccc;
+.List__item:first-child {
+	border-top: 1px dashed #ccc;
 }
 
 /* Пункт списка */
-.Item{
-    display: flex;
-    justify-content: flex-start;
+.Item {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
-.Item__title{
-    width: 100%;
-    padding: 20px 10px;
+.Item__title {
+	width: 200px;
+	text-align: left;
+	padding: 20px 10px;
 }
-.Item__actions{
-    padding: 20px  20px 20px 10px;
-    display: flex;
-    justify-content: flex-end;
+.Item__actions {
+	display: flex;
+	align-items: flex-end;
+	padding: 20px 20px 20px 10px;
 }
-.Item__number{
-    padding: 20px 10px 20px 20px;
+.Item__number {
+	border: 1px solid #353434;
+	border-radius: 50%;
+	padding: 5px 10px;
+	margin-left: 20px;
+}
+.Item__number:hover {
+	background-color: #129469;
+	border: none;
+}
+
+.Line {
+	border-left: 2px solid #353434;
+	height: 20px;
+	padding-right: 10px;
 }
