--- a/src/style.css
+++ b/src/style.css
@@ -71,9 +71,10 @@ body {
 	background-color: #129469;
 	border: none;
 }
-
+/*
 .Line {
 	border-left: 2px solid #353434;
 	height: 20px;
 	padding-right: 10px;
 }
+*/
