--- a/src/components/item/styles.css
+++ b/src/components/item/styles.css
@@ -1,23 +1,25 @@
 /* Пункт списка */
-.Item{
-    display: flex;
-    justify-content: flex-start;
-    transition: background-color 1s;
+.Item {
+	display: flex;
+	justify-content: flex-start;
+	transition: background-color 1s;
+	padding: 22px 20px;
 }
 
-.Item_selected{
-    background: #75aaf1;
-}
+/* .Item_selected {
+	background: #75aaf1;
+} */
 
-.Item__title{
-    width: 100%;
-    padding: 20px 10px;
+.Item__title {
+	display: flex;
+	flex-grow: 1;
 }
-.Item__actions{
-    padding: 20px  20px 20px 10px;
-    display: flex;
-    justify-content: flex-end;
+.Item__actions {
+	display: flex;
+	justify-content: flex-end;
+	padding-left: 20px;
 }
-.Item__number{
-    padding: 20px 10px 20px 20px;
+.Item__number {
+	display: flex;
+	padding-right: 20px;
 }
