--- a/src/components/item/styles.css
+++ b/src/components/item/styles.css
@@ -1,31 +1,41 @@
 /* Пункт списка */
 .Item {
-    display: flex;
-    justify-content: flex-start;
-    transition: background-color 1s;
+  display: flex;
+  justify-content: flex-start;
+  transition: background-color 1s;
 }
 
 .Item_selected {
-    background: #75aaf1;
+  background: #75aaf1;
 }
 
 .Item__number {
-    padding: 20px 10px 20px 20px;
+  padding: 20px 10px 20px 20px;
 }
 
-.Item__title {
-    width: 100%;
-    padding: 20px 10px;
-}
+/* .Item__title {
+  width: 100%;
+  padding: 20px 10px;
+} */
 
 .Item__right {
-    padding: 20px 20px 20px 10px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  padding: 20px 20px 20px 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .Item__price {
-    padding: 0 10px;
-    white-space: nowrap;
+  padding: 0 10px;
+  white-space: nowrap;
+}
+.Item__link {
+  width: 100%;
+  padding: 20px 10px;
+  color: #000000;
+
+  text-decoration: none;
+}
+.Item .Item__link:hover {
+  text-decoration: underline;
 }
