--- a/src/components/edit-form/style.css
+++ b/src/components/edit-form/style.css
@@ -5,51 +5,14 @@
   display: flex;
   flex-direction: column;
 }
-.Form-Input {
-  width: 250px;
-  padding: 3px 2px 2px;
-  margin-bottom: 20px;
+.Form-Wrapper {
+  padding-bottom: 20px;
 }
-.Form-Input_size {
-  width: 150px;
-}
-
-.Form-Description {
+.Form-Label {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
-}
-.Form-Textarea {
-  width: 350px;
-}
-.Form-Country {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-}
-.Form-Select {
-  width: 180px;
-  font-size: 16px;
-  padding: 3px 2px 2px;
-}
-.Form-Category {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-}
-.Form-Edition {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-}
-.Form-Price {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
 }
 .Form-Btn {
   font-size: 16px;
-  padding-top: 5px;
-  padding-bottom: 5px;
   width: 110px;
 }
